server/k8s/dashboard-ingress-secure.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kb-dashboard-secure
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.home.int
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard-kong-proxy
              port:
                number: 443
